Setup cpp support